# personal-activity-index

./: .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  TODO.md  config.example.toml  rustfmt.toml
cli/: Cargo.toml  build.rs
cli/src/: app.rs  main.rs  paths.rs  server.rs
cli/src/storage/: sqlite.rs
conf/: .gitignore  Caddyfile  README.md  nginx.conf
core/: Cargo.toml
core/src/: lib.rs
core/src/fetchers/: bearblog.rs  bluesky.rs  leaflet.rs  mod.rs  substack.rs
server/: Cargo.toml
server/src/: lib.rs  server.rs
worker/: Cargo.toml  api-docs.json  schema.sql  wrangler.example.toml
worker/src/: lib.rs
