[package]
name = "pai"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pai"
path = "src/main.rs"

[dependencies]
pai-core = { path = "../core" }
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
chrono = "0.4"
dirs = "6.0"
owo-colors = "4.1"
