[package]
name = "pai"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pai"
path = "src/main.rs"

[dependencies]
pai-core = { path = "../core" }
pai-server = { path = "../server" }
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
dirs = "6.0"
owo-colors = "4.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rss = "2.0"

[dev-dependencies]
tempfile = "3.13"

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_mangen = "0.2"
pai-core = { path = "../core" }
