[package]
name = "pai-core"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
feed-rs = "2.2"
chrono = "0.4"
