[package]
name = "pai-core"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
feed-rs = "2.2"
chrono = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.0", features = ["macros", "sync"] }
uuid = { version = "1.18", features = ["v4", "js"] }
