[package]
name = "pai-server"
version = "0.1.0"
edition = "2021"

[dependencies]
pai-core = { path = "../core" }
axum = "0.7"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
owo-colors = "4.1"
chrono = "0.4"
rss = "2.0"

[dev-dependencies]
tempfile = "3.13"

[lints]
workspace = true
