[package]
name = "pai-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pai-core = { path = "../core" }
worker = { version = "0.6", features = ["d1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "wasmbind",
] }
rss = { version = "2.0", default-features = false }
